--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -11,7 +11,6 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/off_white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,13 +57,12 @@
 
                         <TextView
                             android:id="@id/selectedCharityCardTitle"
+                            style="@style/Body.Regular.Emphasized"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="22dp"
                             android:layout_marginEnd="20dp"
-                            android:fontFamily="@font/circular_bold"
-                            android:textColor="@color/off_black_dark"
                             android:textSize="16sp" />
 
                         <TextView
