--- a/app/src/main/res/layout/referrals_receiver_activity.xml
+++ b/app/src/main/res/layout/referrals_receiver_activity.xml
@@ -12,16 +12,18 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <!-- TODO: Content Description -->
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin"
-            android:src="@drawable/ic_hedvig_wordmark"/>
+            android:src="@drawable/ic_hedvig_wordmark" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_double"
+            android:contentDescription="@null"
             app:srcCompat="@drawable/ic_invite_success" />
 
         <TextView
@@ -50,6 +52,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_triple"
             android:background="@drawable/button_primary"
+            android:backgroundTint="@color/purple"
             android:fontFamily="@font/circular_book"
             android:paddingLeft="@dimen/referral_receiver_continue_button_padding_edge"
             android:paddingRight="@dimen/referral_receiver_continue_button_padding_edge"
@@ -57,11 +60,9 @@
             android:textAllCaps="false"
             android:textColor="@color/off_white"
             android:textSize="@dimen/text_medium"
-            app:backgroundTint="@color/purple"
             app:layout_constraintBottom_toTopOf="@id/login"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:backgroundTint="@color/purple" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/referralReceiverContinueWithoutButton"
@@ -72,15 +73,14 @@
             android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginBottom="@dimen/base_margin_quadruple"
             android:background="@drawable/button_primary"
+            android:backgroundTint="@color/light_gray"
             android:fontFamily="@font/circular_book"
             android:paddingLeft="@dimen/referral_receiver_continue_without_button_padding_edge"
             android:paddingRight="@dimen/referral_receiver_continue_without_button_padding_edge"
             android:text="@string/REFERRAL_STARTSCREEN_BTN_SKIP"
             android:textAllCaps="false"
-            android:textColor="@color/off_black_dark"
-            android:textSize="@dimen/text_medium"
-            app:backgroundTint="@color/light_gray"
-            tools:backgroundTint="@color/light_gray" />
+            android:textColor="@color/text_emphasized"
+            android:textSize="@dimen/text_medium" />
 
     </LinearLayout>
 </ScrollView>
