--- a/app/src/main/res/drawable/bottom_sheet_handle.xml
+++ b/app/src/main/res/drawable/bottom_sheet_handle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/semi_light_gray" />
+    <solid android:color="@color/bottom_sheet_handle" />
     <corners android:radius="@dimen/bottom_sheet_handle_corner_radius" />
     <size
         android:width="@dimen/bottom_sheet_handle_width"
