--- a/app/src/main/res/drawable/chat_message_hedvig_ripple.xml
+++ b/app/src/main/res/drawable/chat_message_hedvig_ripple.xml
@@ -3,7 +3,7 @@
     android:color="#AAAAAA">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/background_elevation_1" />
             <corners android:radius="@dimen/chat_message_corner_radius" />
         </shape>
     </item>
