--- a/app/src/main/res/drawable/peril_bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/peril_bottom_sheet_background.xml
@@ -10,7 +10,7 @@
     </item>
     <item android:top="@dimen/peril_bottom_sheet_title_height">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/background_elevation_1" />
         </shape>
     </item>
 </layer-list>
