--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
 
-    <item android:drawable="@color/off_white" />
+    <item android:drawable="@color/background" />
 
     <item android:drawable="@drawable/hedvig_wordmark_splash" android:gravity="center" />
 
