--- a/app/src/main/res/values-v21/styles-v21.xml
+++ b/app/src/main/res/values-v21/styles-v21.xml
@@ -3,18 +3,18 @@
 
     <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/background_elevation_1</item>
     </style>
 
     <style name="NoTitleBottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="bottomSheetStyle">@style/NoTitleBottomSheet</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/background_elevation_1</item>
     </style>
 
     <style name="PerilBottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="bottomSheetStyle">@style/PerilBottomSheet</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/background_elevation_1</item>
     </style>
 </resources>
