--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
 
-    <style name="Hedvig.Theme.V21" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Hedvig.Theme.V21" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccentLight</item>
-        <item name="android:windowBackground">@color/off_white</item>
+        <item name="android:windowBackground">@color/background</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:alertDialogTheme">@style/AlertDialog</item>
     </style>
@@ -13,7 +13,7 @@
 
     <style name="Hedvig.Theme.Offer" />
 
-    <style name="Theme.Exponent.Splash" parent="Hedvig.Theme">
+    <style name="Hedvig.Theme.Splash">
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
@@ -49,7 +49,7 @@
 
     <style name="ProfileHeader">
         <item name="android:fontFamily">@font/circular_bold</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
         <item name="android:textSize">32sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
@@ -57,7 +57,7 @@
     </style>
 
     <style name="AppBarTheme" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:background">@color/off_white</item>
+        <item name="android:background">@color/background_elevation_1</item>
         <item name="android:padding">16dp</item>
         <item name="android:layout_height">140dp</item>
         <item name="android:layout_width">match_parent</item>
@@ -70,7 +70,7 @@
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:fontFamily">@font/circular_bold</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -85,7 +85,7 @@
         <item name="colorControlActivated">@color/purple</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/circular_book</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="HedvigButton">
@@ -94,7 +94,7 @@
         <item name="android:paddingStart">32dp</item>
         <item name="android:paddingEnd">32dp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_emphasized</item>
         <item name="android:textSize">14sp</item>
     </style>
 
@@ -103,7 +103,7 @@
     </style>
 
     <style name="HedvigButton.Negative">
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="HedvigButton.Small">
@@ -114,23 +114,23 @@
     </style>
 
     <style name="HedvigButton.Small.Negative">
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:background">@color/off_white</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="AppTheme.AppBarOverlay.ExpandedTitle">
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
         <item name="android:textSize">32sp</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay.CollapsedTitle">
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="AppTheme.MenuItem">
@@ -155,14 +155,14 @@
     <style name="TrustlyTitle">
         <item name="android:fontFamily">@font/soray_extrabold</item>
         <item name="android:textSize">40sp</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="TrustlyParagraph">
         <item name="android:fontFamily">@font/circular_book</item>
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">8sp</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="ProfileField.ValidationError">
@@ -199,7 +199,8 @@
     </style>
 
     <style name="NoTitleBottomSheet">
-        <item name="android:background">@drawable/bottom_sheet_dialog_no_title_fragment_background</item>
+        <item name="android:background">@drawable/bottom_sheet_dialog_no_title_fragment_background
+        </item>
     </style>
 
     <style name="LoadingSpinner" parent="Theme.AppCompat.Light">
@@ -217,7 +218,7 @@
     </style>
 
     <style name="NavigationBar" parent="@style/Widget.MaterialComponents.BottomNavigationView">
-        <item name="android:background">@color/blur_white</item>
+        <item name="android:background">@color/background_semi_transparent</item>
         <item name="enforceTextAppearance">true</item>
         <item name="labelVisibilityMode">labeled</item>
         <item name="itemIconTint">@color/bottom_navigation</item>
