--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -14,7 +14,7 @@
 
     <style name="Header">
         <item name="android:fontFamily">@font/soray_extrabold</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="Header.Large">
@@ -27,7 +27,7 @@
 
     <style name="Headline">
         <item name="android:fontFamily">@font/circular_bold</item>
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="Headline.Large">
@@ -36,7 +36,7 @@
     </style>
 
     <style name="Headline.Large.Negative">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="Headline.Medium">
@@ -45,7 +45,7 @@
     </style>
 
     <style name="Headline.Medium.Negative">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="Headline.Small">
@@ -54,7 +54,7 @@
     </style>
 
     <style name="Headline.Small.Negative">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="Body">
@@ -68,7 +68,7 @@
     </style>
 
     <style name="Body.Regular.Emphasized">
-        <item name="android:textColor">@color/off_black_dark</item>
+        <item name="android:textColor">@color/text_emphasized</item>
     </style>
 
     <style name="Body.Regular.Link">
@@ -88,7 +88,7 @@
     </style>
 
     <style name="Body.Regular.Negative">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="Body.Small">
@@ -113,7 +113,7 @@
     </style>
 
     <style name="Body.Small.Negative">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="Body.XSmall">
@@ -122,7 +122,7 @@
     </style>
 
     <style name="Body.XSmall.Negative">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_negative</item>
     </style>
 
     <style name="TabBar">
