A million WIP changes

--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -21,82 +21,74 @@
 
         <Button
             android:id="@+id/openWhatsNew"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open What's new screen" />
 
         <Button
             android:id="@+id/openNativeChat"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open native chat screen" />
 
         <Button
             android:id="@+id/openNativeOffer"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open native offer screen" />
 
         <Button
             android:id="@+id/openAlert"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open an alert" />
 
         <Button
             android:id="@+id/openLoggedIn"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open an logged in with Welcome Screen" />
 
         <Button
             android:id="@+id/openReferralReceiver"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open referral receiver" />
 
         <Button
             android:id="@+id/openReferralNotification"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open referral notification" />
 
         <Button
             android:id="@+id/openPostSignDD"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Open Post-sign Direct Debit screen" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -115,12 +107,11 @@
 
         <Button
             android:id="@+id/saveToken"
-            style="@style/HedvigButton"
+            style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:backgroundTint="@color/purple"
             android:text="Save token" />
 
     </LinearLayout>
