--- a/app/src/main/res/drawable/peril_bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/peril_bottom_sheet_background.xml
@@ -5,7 +5,7 @@
             <corners
                 android:topLeftRadius="@dimen/bottom_sheet_corner_radius"
                 android:topRightRadius="@dimen/bottom_sheet_corner_radius" />
-            <solid android:color="@color/off_white" />
+            <solid android:color="@color/background_elevation_1" />
         </shape>
     </item>
     <item android:top="@dimen/peril_bottom_sheet_title_height">
