--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hedvig.app.feature.profile.ui.charity.CharityFragment">
+    tools:context="com.hedvig.app.feature.profile.ui.charity.CharityActivity">
 
     <include layout="@layout/app_bar" />
 
@@ -26,20 +26,21 @@
                 android:id="@id/selectedCharityContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="@dimen/base_margin_sextuple"
                 android:orientation="vertical"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@id/selectedCharityBanner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginStart="@dimen/base_margin_triple"
+                    android:layout_marginEnd="@dimen/base_margin_triple"
                     android:contentDescription="@null" />
 
                 <com.hedvig.app.ui.view.HedvigCardView
@@ -60,23 +61,21 @@
                             style="@style/Body.Regular.Emphasized"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginTop="22dp"
-                            android:layout_marginEnd="20dp"
-                            android:textSize="16sp" />
+                            android:layout_marginStart="@dimen/base_margin_double"
+                            android:layout_marginTop="@dimen/base_margin_triple"
+                            android:layout_marginEnd="@dimen/base_margin_double"
+                            tools:text="SOS Barnbyar" />
 
                         <TextView
                             android:id="@id/selectedCharityCardParagraph"
+                            style="@style/Body.Small"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginEnd="20dp"
-                            android:layout_marginBottom="22dp"
-                            android:fontFamily="@font/circular_book"
-                            android:lineSpacingExtra="6dp"
-                            android:textColor="@color/off_black"
-                            android:textSize="14sp" />
+                            android:layout_marginStart="@dimen/base_margin_double"
+                            android:layout_marginTop="@dimen/base_margin"
+                            android:layout_marginEnd="@dimen/base_margin_double"
+                            android:layout_marginBottom="@dimen/base_margin_triple"
+                            tools:text="För att bli en trygg vuxen krävs en trygg barndom. Därför arbetar SOS Barnbyar med långsiktiga insatser för att inte ett enda barn ska behöva växa upp ensamt" />
 
                     </LinearLayout>
 
@@ -138,7 +137,6 @@
                     android:layout_marginTop="@dimen/base_margin_triple" />
 
             </LinearLayout>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
