--- a/app/src/main/res/layout/bottom_sheet_honesty_pledge.xml
+++ b/app/src/main/res/layout/bottom_sheet_honesty_pledge.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -35,13 +33,11 @@
 
     <Button
         android:id="@+id/bottomSheetHonestyPledgeButton"
-        style="@style/HedvigButton"
+        style="@style/HedvigButton.Purple"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/base_margin_quadruple"
-        android:text="@string/CLAIMS_HONESTY_PLEDGE_BOTTOM_SHEET_BUTTON_LABEL"
-        app:backgroundTint="@color/purple"
-        tools:backgroundTint="@color/purple" />
+        android:text="@string/CLAIMS_HONESTY_PLEDGE_BOTTOM_SHEET_BUTTON_LABEL" />
 
 </LinearLayout>
