--- a/app/src/main/res/layout/chat_message_user.xml
+++ b/app/src/main/res/layout/chat_message_user.xml
@@ -35,7 +35,8 @@
             android:paddingTop="@dimen/base_margin"
             android:paddingEnd="@dimen/base_margin_double"
             android:paddingBottom="@dimen/base_margin"
-            android:textColorLink="@color/off_white"
+            android:textColor="@color/white"
+            android:textColorLink="@color/white"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@id/statusMessage"
             app:layout_constraintEnd_toStartOf="@id/editMessage"
@@ -65,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:textColor="@color/off_black"
+            android:textColor="@color/text_regular"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
