--- a/app/src/main/res/layout/referral_header.xml
+++ b/app/src/main/res/layout/referral_header.xml
@@ -89,7 +89,7 @@
         android:paddingTop="@dimen/base_margin_half"
         android:paddingEnd="@dimen/base_margin_double"
         android:paddingBottom="@dimen/base_margin_half"
-        android:textColor="@color/purple"
+        android:textColor="@color/link_purple"
         tools:text="HDVG87" />
 
     <include
