--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="background" type="color">@color/off_white</item>
-    <item name="background_elevation_1" type="color">@color/off_white</item>
+    <item name="background_elevation_1" type="color">@color/white</item>
     <item name="text_emphasized" type="color">@color/off_black_dark</item>
+    <item name="text_regular" type="color">@color/off_black</item>
     <item name="text_negative" type="color">@color/white</item>
     <item name="bottom_sheet_handle" type="color">@color/semi_light_gray</item>
     <item name="background_semi_transparent" type="color">@color/blur_white</item>
+    <item name="light_system_ui" type="bool">true</item>
+    <item name="icon_tint" type="color">@null</item>
+    <item name="hedvig_logo_weak_tint" type="color">@color/gray</item>
+    <item name="link_purple" type="color">@color/purple</item>
+    <item name="separator" type="color">@color/gray</item>
 </resources>
