--- a/app/src/main/res/color/bottom_navigation.xml
+++ b/app/src/main/res/color/bottom_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/purple" android:state_checked="true" />
-    <item android:color="@color/off_black" android:state_checked="false" />
+    <item android:color="@color/link_purple" android:state_checked="true" />
+    <item android:color="@color/text_regular" android:state_checked="false" />
 </selector>
