--- a/app/src/main/res/layout/common_claim_first_message.xml
+++ b/app/src/main/res/layout/common_claim_first_message.xml
@@ -33,23 +33,14 @@
 
     <Button
         android:id="@+id/commonClaimCreateClaimButton"
-        style="?android:attr/borderlessButtonStyle"
+        style="@style/HedvigButton.Purple"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/base_margin_triple"
-        android:background="@drawable/button_primary"
-        android:fontFamily="@font/circular_book"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:textAllCaps="false"
-        android:textColor="@color/off_white"
-        android:textSize="@dimen/text_medium"
-        app:backgroundTint="@color/purple"
         app:layout_constraintBottom_toTopOf="@id/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:backgroundTint="@color/purple"
         tools:text="Anmäl försenat bagage" />
 
 </LinearLayout>
