--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="Hedvig.Theme.V23" parent="Hedvig.Theme.V21">
         <item name="android:statusBarColor">@color/background</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar">@bool/light_system_ui</item>
     </style>
 
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V23" />
