--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,14 +75,14 @@
     </style>
 
     <style name="ProfileFieldLabel">
-        <item name="android:textColor">@color/off_black</item>
+        <item name="android:textColor">@color/text_regular</item>
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/circular_book</item>
     </style>
 
     <style name="ProfileField" parent="Widget.Design.TextInputLayout">
         <item name="hintTextAppearance">@style/ProfileFieldLabel</item>
-        <item name="colorControlActivated">@color/purple</item>
+        <item name="colorControlActivated">@color/link_purple</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/circular_book</item>
         <item name="android:textColor">@color/text_emphasized</item>
@@ -96,6 +96,11 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/text_emphasized</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="HedvigButton.Purple">
+        <item name="android:backgroundTint">@color/purple</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="HedvigButton.Outlined">
@@ -134,20 +139,20 @@
     </style>
 
     <style name="AppTheme.MenuItem">
-        <item name="android:textColor">@color/purple</item>
+        <item name="android:textColor">@color/link_purple</item>
         <item name="android:fontFamily">@font/circular_book</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="AppTheme.Toolbar" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:actionMenuTextColor">@color/purple</item>
+        <item name="android:actionMenuTextColor">@color/link_purple</item>
         <item name="android:actionMenuTextAppearance">@style/AppTheme.MenuItem</item>
     </style>
 
     <style name="DialogButton">
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/purple</item>
+        <item name="android:textColor">@color/link_purple</item>
         <item name="android:fontFamily">@font/circular_medium</item>
         <item name="android:textSize">14sp</item>
     </style>
@@ -228,7 +233,7 @@
     </style>
 
     <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/purple</item>
+        <item name="colorAccent">@color/link_purple</item>
         <item name="android:background">@drawable/background_rounded_corners</item>
         <item name="android:fontFamily">@font/circular_book</item>
     </style>
